Added few shots prompting, changed weather api, changed model to

--- a/notebooks/integrations/openai/function-calling.ipynb
+++ b/notebooks/integrations/openai/function-calling.ipynb
@@ -48,10 +48,11 @@
     "`OPENAI_API_KEY`: Setup an [Open AI account and create a secret key](https://platform.openai.com/docs/quickstart).  \n",
     "`GPT_MODEL`: We’re going to use the `gpt-4o` model but you can check [here](https://platform.openai.com/docs/guides/function-calling) which model is being supported for function calling.\n",
     "\n",
-    "### Weather Union\n",
+    "### Open-Meteo API\n",
     "\n",
-    "We will use the [Weather Union API](https://weatherunion.com). Which gives the weather reports of different cities in India.  \n",
-    "`WU_API_KEY` & `WU_ENDPOINT` = [Create an account](https://www.weatherunion.com/login) and generate API Key.\n",
+    "We will use the [Open-Meteo API](https://open-meteo.com/). Open-Meteo is an open-source weather API and offers free access for non-commercial use. No API key required. \n",
+    "\n",
+    "`OPEN_METEO_ENDPOINT`: `https://api.open-meteo.com/v1/forecast?`\n",
     "\n",
     "### Sample Data\n",
     "After creating Elastic cloud deployment, Let’s [add sample flight data](https://www.elastic.co/guide/en/kibana/8.13/get-started.html#gs-get-data-into-kibana) on kibana. Sample data will be stored into the `kibana_sample_data_flights` index.\n",
@@ -103,14 +104,13 @@
     "client = OpenAI(\n",
     "    api_key=OPENAI_API_KEY,\n",
     ")\n",
-    "GPT_MODEL = input(\"GPT Model:\")\n",
+    "GPT_MODEL = \"gpt-4o\"\n",
     "\n",
     "ES_API_KEY = getpass(\"Elastic API Key:\")\n",
     "ES_ENDPOINT = input(\"Elasticsearch Endpoint:\")\n",
     "ES_INDEX = \"kibana_sample_data_flights\"\n",
     "\n",
-    "WU_API_KEY = getpass(\"Weather Union API Key:\")\n",
-    "WU_API_ENDPOINT = input(\"Weather Union API Endpoint:\")"
+    "OPEN_METEO_ENDPOINT = \"https://api.open-meteo.com/v1/forecast\""
    ]
   },
   {
@@ -203,6 +203,70 @@
     "    index_mapping = get_index_mapping()\n",
     "    ref_document = get_ref_document()\n",
     "\n",
+    "    few_shots_prompt = \"\"\"\n",
+    "    1. User Query - Average delay time of flights going to India\n",
+    "        Elasticsearch Query DSL: \n",
+    "         {\n",
+    "          \"size\": 0,\n",
+    "          \"query\": {\n",
+    "            \"bool\": {\n",
+    "              \"filter\": {\n",
+    "                \"term\": {\n",
+    "                  \"DestCountry\": \"IN\"\n",
+    "                }\n",
+    "              }\n",
+    "            }\n",
+    "          },\n",
+    "          \"aggs\": {\n",
+    "            \"average_delay\": {\n",
+    "              \"avg\": {\n",
+    "                \"field\": \"FlightDelayMin\"\n",
+    "              }\n",
+    "            }\n",
+    "          }\n",
+    "        }\n",
+    "\n",
+    "        2. User Query - airlines with the highest delays\n",
+    "        Elasticsearch Query DSL: \n",
+    "         {\n",
+    "          \"size\": 0,\n",
+    "          \"aggs\": {\n",
+    "            \"airlines_with_highest_delays\": {\n",
+    "              \"terms\": {\n",
+    "                \"field\": \"Carrier\",\n",
+    "                \"order\": {\n",
+    "                  \"average_delay\": \"desc\"\n",
+    "                }\n",
+    "              },\n",
+    "              \"aggs\": {\n",
+    "                \"average_delay\": {\n",
+    "                  \"avg\": {\n",
+    "                    \"field\": \"FlightDelayMin\"\n",
+    "                  }\n",
+    "                }\n",
+    "              }\n",
+    "            }\n",
+    "          }\n",
+    "        }\n",
+    "\n",
+    "        3. User Query - Which was the last flight that got delayed for Bangalore\n",
+    "        Elasticsearch Query DSL: \n",
+    "        {\n",
+    "          \"query\": {\n",
+    "            \"bool\": {\n",
+    "              \"must\": [\n",
+    "                { \"match\": { \"DestCityName\": \"Bangalore\" } },\n",
+    "                { \"term\": { \"FlightDelay\": true } }\n",
+    "              ]\n",
+    "            }\n",
+    "          },\n",
+    "          \"sort\": [\n",
+    "            { \"timestamp\": { \"order\": \"desc\" } }\n",
+    "          ],\n",
+    "          \"size\": 1\n",
+    "        }\n",
+    "    \"\"\"\n",
+    "    \n",
     "    prompt = f\"\"\"\n",
     "        Use below index mapping and reference document to build Elasticsearch query:\n",
     "\n",
@@ -212,11 +276,18 @@
     "        Reference elasticsearch document:\n",
     "        {ref_document}\n",
     "\n",
-    "        Return single line Elasticsearch Query DSL according to index mapping for the below search query. Just return Query DSL without REST specification (e.g. GET, POST etc.) and json markdown format (e.g. ```json):\n",
+    "        Return single line Elasticsearch Query DSL according to index mapping for the below search query related to flights.:\n",
     "\n",
     "        {nl_query}\n",
     "\n",
     "        If any field has a `keyword` type, Just use field name instead of field.keyword.\n",
+    "\n",
+    "        Just return Query DSL without REST specification (e.g. GET, POST etc.) and json markdown format (e.g. ```json)\n",
+    "\n",
+    "        few example of Query DSL\n",
+    "\n",
+    "        {few_shots_prompt}\n",
+    "        \n",
     "    \"\"\"\n",
     "\n",
     "    resp = client.chat.completions.create(\n",
@@ -287,15 +358,13 @@
    "source": [
     "def weather_report(latitude, longitude):\n",
     "\n",
-    "    url = f\"\"\"{WU_API_ENDPOINT}?latitude={latitude}&longitude={longitude}\"\"\"\n",
+    "    url = f\"\"\"{OPEN_METEO_ENDPOINT}?latitude={latitude}&longitude={longitude}&current=temperature_2m,precipitation,cloud_cover,visibility,wind_speed_10m\"\"\"\n",
     "\n",
-    "    headers = {\"x-zomato-api-key\": f\"\"\"{WU_API_KEY}\"\"\"}\n",
-    "\n",
-    "    resp = requests.request(\"GET\", url, headers=headers)\n",
+    "    resp = requests.request(\"GET\", url)\n",
     "    resp = json.loads(resp.text)\n",
     "    json_resp = json.dumps(resp, indent=4)\n",
     "\n",
-    "    # print(f\"\"\"\\n\\nWeatherUnion response: ==== \\n\\n {json_resp}\"\"\")\n",
+    "    # print(f\"\"\"\\n\\nOpen-Meteo response: ==== \\n\\n {json_resp}\"\"\")\n",
     "    return json_resp"
    ]
   },
@@ -315,7 +384,7 @@
    "outputs": [],
    "source": [
     "def run_conversation(query):\n",
-    "\n",
+    "    \n",
     "    all_functions = [\n",
     "        {\n",
     "            \"type\": \"function\",\n",
@@ -361,7 +430,7 @@
     "    messages.append(\n",
     "        {\n",
     "            \"role\": \"system\",\n",
-    "            \"content\": \"If no data received from any function. Just say there is issue fetching details from function(function_name)\",\n",
+    "            \"content\": \"If no data received from any function. Just say there is issue fetching details from function(function_name).\",\n",
     "        }\n",
     "    )\n",
     "\n",
@@ -419,12 +488,12 @@
     "                }\n",
     "            )\n",
     "\n",
-    "            second_response = client.chat.completions.create(\n",
-    "                model=GPT_MODEL,\n",
-    "                messages=messages,\n",
-    "            )\n",
+    "        second_response = client.chat.completions.create(\n",
+    "            model=GPT_MODEL,\n",
+    "            messages=messages,\n",
+    "        )\n",
     "\n",
-    "            return second_response.choices[0].message.content"
+    "        return second_response.choices[0].message.content"
    ]
   },
   {
@@ -437,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 122,
    "id": "bbf1a2dc-49f8-4bfd-8317-7f28c5ef4715",
    "metadata": {},
    "outputs": [
@@ -445,29 +514,34 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Ask: last 10 flight delay to bangalore, show in table\n"
+      "Ask: last 10 flight delays to Bangalore. Give output in table. Also how is the climate in bangalore?\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here are the last 10 flight delays to Bangalore:\n",
+      "### Last 10 Flight Delays to Bangalore\n",
       "\n",
-      "| Flight Number | Origin City | Carrier           | Delay (Minutes) | Delay Type             | Date & Time          |\n",
-      "|---------------|-------------|-------------------|------------------|------------------------|----------------------|\n",
-      "| B2JWDRX       | Catania     | Kibana Airlines   | 60               | Security Delay         | 2024-03-03 13:32:15  |\n",
-      "| C9C7VBY       | Frankfurt   | Logstash Airways  | 285              | Security Delay         | 2024-03-01 05:20:01  |\n",
-      "| 09P9K2Z       | Paris       | Kibana Airlines   | 195              | Late Aircraft Delay    | 2024-02-29 06:02:38  |\n",
-      "| 0FXK4HG       | Osaka       | Logstash Airways  | 195              | Carrier Delay          | 2024-02-23 03:34:21  |\n",
-      "| 5EYOHJR       | Genova      | ES-Air            | 360              | NAS Delay              | 2024-02-21 15:51:26  |\n",
-      "| X5HA5YJ       | Bangor      | Kibana Airlines   | 330              | Weather Delay          | 2024-02-19 13:50:58  |\n",
-      "| 4BZUCXP       | Bogota      | ES-Air            | 30               | Late Aircraft Delay    | 2024-02-16 05:59:37  |\n",
-      "| O8I6UU8       | Catania     | ES-Air            | 135              | Late Aircraft Delay    | 2024-02-09 03:12:49  |\n",
-      "| 56HYVZQ       | Denver      | Logstash Airways  | 60               | NAS Delay              | 2024-02-08 15:52:44  |\n",
-      "| X4025SP       | Paris       | Kibana Airlines   | 30               | Late Aircraft Delay    | 2024-02-08 10:57:29  |\n",
+      "| Flight Number | Origin City             | Carrier           | Origin Weather       | Destination Weather | Delay Type            | Delay Minutes |\n",
+      "|---------------|-------------------------|-------------------|----------------------|---------------------|-----------------------|---------------|\n",
+      "| B2JWDRX       | Catania                 | Kibana Airlines   | Hail                 | Cloudy              | Security Delay        | 60            |\n",
+      "| C9C7VBY       | Frankfurt am Main       | Logstash Airways  | Rain                 | Rain                | Security Delay        | 285           |\n",
+      "| 09P9K2Z       | Paris                   | Kibana Airlines   | Clear                | Sunny               | Late Aircraft Delay   | 195           |\n",
+      "| 0FXK4HG       | Osaka                   | Logstash Airways  | Sunny                | Thunder & Lightning | Carrier Delay         | 195           |\n",
+      "| 5EYOHJR       | Genova                  | ES-Air            | Rain                 | Rain                | NAS Delay             | 360           |\n",
+      "| X5HA5YJ       | Bangor                  | Kibana Airlines   | Thunder & Lightning  | Clear               | Weather Delay         | 330           |\n",
+      "| 4BZUCXP       | Bogota                  | ES-Air            | Sunny                | Thunder & Lightning | Late Aircraft Delay   | 30            |\n",
+      "| O8I6UU8       | Catania                 | ES-Air            | Damaging Wind        | Sunny               | Late Aircraft Delay   | 135           |\n",
+      "| 56HYVZQ       | Denver                  | Logstash Airways  | Thunder & Lightning  | Thunder & Lightning | NAS Delay             | 60            |\n",
+      "| X4025SP       | Paris                   | Kibana Airlines   | Thunder & Lightning  | Clear               | Late Aircraft Delay   | 30            |\n",
       "\n",
-      "If you need more details or further assistance, please let me know.\n"
+      "### Current Climate in Bangalore\n",
+      "- **Temperature**: 24.0°C\n",
+      "- **Precipitation**: 0.0 mm\n",
+      "- **Cloud Cover**: 51%\n",
+      "- **Visibility**: 7300 meters\n",
+      "- **Wind Speed**: 9.2 km/h\n"
      ]
     }
    ],
