Added few shots prompting, changed weather api, changed model to

--- a/notebooks/integrations/openai/function-calling.ipynb
+++ b/notebooks/integrations/openai/function-calling.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "We will use the [Open-Meteo API](https://open-meteo.com/). Open-Meteo is an open-source weather API and offers free access for non-commercial use. No API key required. \n",
     "\n",
-    "`OPEN_METEO_ENDPOINT`: `https://api.open-meteo.com/v1/forecast?`\n",
+    "`OPEN_METEO_ENDPOINT`: `https://api.open-meteo.com/v1/forecast`\n",
     "\n",
     "### Sample Data\n",
     "After creating Elastic cloud deployment, Let’s [add sample flight data](https://www.elastic.co/guide/en/kibana/8.13/get-started.html#gs-get-data-into-kibana) on kibana. Sample data will be stored into the `kibana_sample_data_flights` index.\n",
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 137,
    "id": "bbf1a2dc-49f8-4bfd-8317-7f28c5ef4715",
    "metadata": {},
    "outputs": [
@@ -514,38 +514,42 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Ask: last 10 flight delays to Bangalore. Give output in table. Also how is the climate in bangalore?\n"
+      "Ask: details of last 10 delayed flights for Bangalore in tabular format and describe the current climate there.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "### Last 10 Flight Delays to Bangalore\n",
+      "### Last 10 Delayed Flights for Bangalore\n",
       "\n",
-      "| Flight Number | Origin City             | Carrier           | Origin Weather       | Destination Weather | Delay Type            | Delay Minutes |\n",
-      "|---------------|-------------------------|-------------------|----------------------|---------------------|-----------------------|---------------|\n",
-      "| B2JWDRX       | Catania                 | Kibana Airlines   | Hail                 | Cloudy              | Security Delay        | 60            |\n",
-      "| C9C7VBY       | Frankfurt am Main       | Logstash Airways  | Rain                 | Rain                | Security Delay        | 285           |\n",
-      "| 09P9K2Z       | Paris                   | Kibana Airlines   | Clear                | Sunny               | Late Aircraft Delay   | 195           |\n",
-      "| 0FXK4HG       | Osaka                   | Logstash Airways  | Sunny                | Thunder & Lightning | Carrier Delay         | 195           |\n",
-      "| 5EYOHJR       | Genova                  | ES-Air            | Rain                 | Rain                | NAS Delay             | 360           |\n",
-      "| X5HA5YJ       | Bangor                  | Kibana Airlines   | Thunder & Lightning  | Clear               | Weather Delay         | 330           |\n",
-      "| 4BZUCXP       | Bogota                  | ES-Air            | Sunny                | Thunder & Lightning | Late Aircraft Delay   | 30            |\n",
-      "| O8I6UU8       | Catania                 | ES-Air            | Damaging Wind        | Sunny               | Late Aircraft Delay   | 135           |\n",
-      "| 56HYVZQ       | Denver                  | Logstash Airways  | Thunder & Lightning  | Thunder & Lightning | NAS Delay             | 60            |\n",
-      "| X4025SP       | Paris                   | Kibana Airlines   | Thunder & Lightning  | Clear               | Late Aircraft Delay   | 30            |\n",
+      "| Flight Number | Origin City          | Flight Delay Type          | Flight Delay Min | Airline          | Avg Ticket Price | Origin Weather       | Destination Weather       | Status                 |\n",
+      "|---------------|----------------------|----------------------------|------------------|------------------|------------------|----------------------|---------------------------|------------------------|\n",
+      "| B2JWDRX       | Catania              | Security Delay             | 60               | Kibana Airlines  | 999.02           | Hail                 | Cloudy                    | On Time                |\n",
+      "| C9C7VBY       | Frankfurt am Main    | Security Delay             | 285              | Logstash Airways | 807.13           | Rain                 | Rain                      | On Time                |\n",
+      "| 09P9K2Z       | Paris                | Late Aircraft Delay        | 195              | Kibana Airlines  | 942.35           | Clear                | Sunny                     | On Time                |\n",
+      "| 0FXK4HG       | Osaka                | Carrier Delay              | 195              | Logstash Airways | 957.95           | Sunny                | Thunder & Lightning       | On Time                |\n",
+      "| 5EYOHJR       | Genova               | NAS Delay                  | 360              | ES-Air           | 963.11           | Rain                 | Rain                      | On Time                |\n",
+      "| X5HA5YJ       | Bangor               | Weather Delay              | 330              | Kibana Airlines  | 523.27           | Thunder & Lightning  | Clear                     | On Time                |\n",
+      "| 4BZUCXP       | Bogota               | Late Aircraft Delay        | 30               | ES-Air           | 972.79           | Sunny                | Thunder & Lightning       | On Time                |\n",
+      "| O8I6UU8       | Catania              | Late Aircraft Delay        | 135              | ES-Air           | 792.41           | Damaging Wind        | Sunny                     | Cancelled              |\n",
+      "| 56HYVZQ       | Denver               | NAS Delay                  | 60               | Logstash Airways | 923.13           | Thunder & Lightning  | Thunder & Lightning       | On Time                |\n",
+      "| X4025SP       | Paris                | Late Aircraft Delay        | 30               | Kibana Airlines  | 576.87           | Thunder & Lightning  | Clear                     | Cancelled              |\n",
       "\n",
       "### Current Climate in Bangalore\n",
-      "- **Temperature**: 24.0°C\n",
-      "- **Precipitation**: 0.0 mm\n",
-      "- **Cloud Cover**: 51%\n",
-      "- **Visibility**: 7300 meters\n",
-      "- **Wind Speed**: 9.2 km/h\n"
+      "\n",
+      "- **Temperature:** 23.5°C\n",
+      "- **Precipitation:** 0.0 mm\n",
+      "- **Cloud Cover:** 49%\n",
+      "- **Visibility:** 24,140 meters\n",
+      "- **Wind Speed:** 8.6 km/h\n",
+      "\n",
+      "The current weather in Bangalore is partly cloudy with a temperature of 23.5°C. The visibility is excellent, and there is no precipitation.\n"
      ]
     }
    ],
    "source": [
+    "# Ask: details of last 10 delayed flights for Bangalore in tabular format and describe the current climate there.\n",
     "i = input(\"Ask:\")\n",
     "answer = run_conversation(i)\n",
     "print(answer)"
