added pip install google.colab
fixed issue during checks.  installed  google.colab

--- a/notebooks/document-chunking/fetch-surrounding-chunks.ipynb
+++ b/notebooks/document-chunking/fetch-surrounding-chunks.ipynb
@@ -48,6 +48,7 @@
    "source": [
     "!pip install elasticsearch\n",
     "!pip install pandas\n",
+    "!pip install google.colab\n",
     "import json\n",
     "import time\n",
     "import urllib.request\n",
