--- a/notebooks/document-chunking/fetch-surrounding-chunks.ipynb
+++ b/notebooks/document-chunking/fetch-surrounding-chunks.ipynb
@@ -78,7 +78,9 @@
     "3. **Embedding Models**:\n",
     "   - `dense_embedding_model`: Specifies the model used for generating dense embeddings (`sentence-transformers__all-minilm-l6-v2`).\n",
     "   - `dense_huggingface_model_id`: The Hugging Face model ID for the dense embeddings (`sentence-transformers/all-MiniLM-L6-v2`).\n",
+    "   - `dense_es_model_id`: Model ID name within Elastic (`sentence-transformers__all-minilm-l6-v2`).\n",
     "   - `dense_model_number_of_allocators`: The number of allocators for the dense embedding model (2).\n",
+    "  \n",
     "\n",
     "   - `elser_model_id`: Specifies the ELSER model ID (`.elser_model_2_linux-x86_64`).\n",
     "   - `elser_model_number_of_allocators`: The number of allocators for the ELSER model (2).\n",
@@ -113,6 +115,7 @@
     "\n",
     "dense_embedding_model = \"sentence-transformers__all-minilm-l6-v2\"\n",
     "dense_huggingface_model_id = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "dense_es_model_id = \"sentence-transformers__all-minilm-l6-v2\"\n",
     "dense_model_number_of_allocators = 2\n",
     "\n",
     "elser_model_id = \".elser_model_2_linux-x86_64\"\n",
@@ -156,7 +159,7 @@
   {
    "cell_type": "code",
    "source": [
-    "!eland_import_hub_model --cloud-id $ELASTIC_CLOUD_ID --hub-model-id {dense_huggingface_model_id} --task-type text_embedding --es-api-key $ELASTIC_API_KEY --start --clear-previous\n",
+    "!eland_import_hub_model --cloud-id $ELASTIC_CLOUD_ID --es-model-id {dense_es_model_id} --hub-model-id {dense_huggingface_model_id} --task-type text_embedding --es-api-key $ELASTIC_API_KEY --start --clear-previous\n",
     "resp = esclient.ml.update_trained_model_deployment(\n",
     "    model_id=dense_embedding_model,\n",
     "    body={\"number_of_allocations\": dense_model_number_of_allocators},\n",
@@ -243,7 +246,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Start trained model deployment if not already deployed\n",
+    "# Start ELSER model deployment if not already deployed\n",
     "esclient.ml.start_trained_model_deployment(\n",
     "    model_id=elser_model_id,\n",
     "    number_of_allocations=elser_model_number_of_allocators,\n",
@@ -670,7 +673,7 @@
     "                \"processor\": {\n",
     "                    \"inference\": {\n",
     "                        \"field_map\": {\"_ingest._value.text\": \"text_field\"},\n",
-    "                        \"model_id\": \"sentence-transformers__all-minilm-l6-v2\",\n",
+    "                        \"model_id\": dense_es_model_id,\n",
     "                        \"target_field\": \"_ingest._value.vector\",\n",
     "                        \"on_failure\": [\n",
     "                            {\n",
