--- a/notebooks/document-chunking/fetch-surrounding-chunks.ipynb
+++ b/notebooks/document-chunking/fetch-surrounding-chunks.ipynb
@@ -1181,6 +1181,7 @@
     "hit_id = None\n",
     "chunk_number = None\n",
     "chapter_number = None\n",
+    "max_chapter_chunk_result = None\n",
     "\n",
     "if results and results.get(\"hits\") and results[\"hits\"].get(\"hits\"):\n",
     "    highest_score = -1\n",
