update for debug
for debugging changed max_chapter_chunk_result

--- a/notebooks/document-chunking/fetch-surrounding-chunks.ipynb
+++ b/notebooks/document-chunking/fetch-surrounding-chunks.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "id": "nXuL8wsQNq8G",
     "colab": {
@@ -182,7 +182,7 @@
     },
     "outputId": "6389acbb-f13e-4850-8e66-cd814d39bb83"
    },
-   "execution_count": 61,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
@@ -227,7 +227,7 @@
     },
     "outputId": "35415b4a-6ccd-4820-fedc-5f0a63ba1c83"
    },
-   "execution_count": 62,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
@@ -734,7 +734,7 @@
    "metadata": {
     "id": "xB2a9-qtONbQ"
    },
-   "execution_count": 64,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -820,7 +820,7 @@
     },
     "outputId": "b7feb26f-a084-4d48-dbba-4a53cc0b0255"
    },
-   "execution_count": 65,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
@@ -943,7 +943,7 @@
     },
     "outputId": "5a1ed103-d9be-42ae-daac-bab2daca51be"
    },
-   "execution_count": 67,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
@@ -1013,7 +1013,7 @@
     },
     "outputId": "68318a23-b10f-49ab-a329-ec32b1d49993"
    },
-   "execution_count": 68,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
@@ -1071,7 +1071,7 @@
     },
     "outputId": "e07cace3-8c74-4a72-b2a9-10a7f22d99fd"
    },
-   "execution_count": 69,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
@@ -1119,7 +1119,7 @@
     },
     "outputId": "4e8a2859-6c28-42ff-b956-7183c80ede9e"
    },
-   "execution_count": 70,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
@@ -1181,7 +1181,10 @@
     "hit_id = None\n",
     "chunk_number = None\n",
     "chapter_number = None\n",
+    "max_chunk_number = None\n",
     "max_chapter_chunk_result = None\n",
+    "max_chapter_chunk_result = None\n",
+    "\n",
     "\n",
     "if results and results.get(\"hits\") and results[\"hits\"].get(\"hits\"):\n",
     "    highest_score = -1\n",
@@ -1214,10 +1217,11 @@
     "print(f\"Fetch Surrounding Chunks\")\n",
     "print(f\"------------------------\")\n",
     "\n",
+    "max_chunk_query = get_max_chunk_number_query(chapter_number, debug=False)\n",
+    "\n",
+    "# max_chapter_chunk_result = esclient.search(index=index_name, body=get_max_chunk_number_query(chapter_number, debug=False), _source=False)\n",
     "max_chapter_chunk_result = esclient.search(\n",
-    "    index=index_name,\n",
-    "    body=get_max_chunk_number_query(chapter_number, debug=False),\n",
-    "    _source=False,\n",
+    "    index=index_name, body=max_chunk_query, _source=False\n",
     ")\n",
     "max_chunk_number = max_chapter_chunk_result[\"aggregations\"][\"max_chunk_number\"][\n",
     "    \"max_chunk\"\n",
@@ -1234,9 +1238,9 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "outputId": "c932fb1c-5bdf-45ef-c6d9-452c49273be4"
+    "outputId": "fa6b58d7-ce04-47f2-c42a-289f13056213"
    },
-   "execution_count": 71,
+   "execution_count": null,
    "outputs": [
     {
      "output_type": "stream",
