--- a/notebooks/document-chunking/fetch-surrounding-chunks.ipynb
+++ b/notebooks/document-chunking/fetch-surrounding-chunks.ipynb
@@ -1183,7 +1183,7 @@
     "chapter_number = None\n",
     "max_chunk_number = None\n",
     "max_chapter_chunk_result = None\n",
-    "max_chapter_chunk_result = None\n",
+    "max_chunk_query = None\n",
     "\n",
     "\n",
     "if results and results.get(\"hits\") and results[\"hits\"].get(\"hits\"):\n",
@@ -1214,33 +1214,43 @@
     "else:\n",
     "    print(\"No results found.\")\n",
     "\n",
-    "print(f\"Fetch Surrounding Chunks\")\n",
-    "print(f\"------------------------\")\n",
+    "# Fetch Surrounding Chunks if chapter_number is not None\n",
+    "if chapter_number is not None:\n",
+    "    print(f\"Fetch Surrounding Chunks\")\n",
+    "    print(f\"------------------------\")\n",
     "\n",
-    "max_chunk_query = get_max_chunk_number_query(chapter_number, debug=False)\n",
+    "    # max_chunk_query = get_max_chunk_number_query(chapter_number, debug=False)\n",
+    "    # max_chapter_chunk_result = esclient.search(index=index_name, body=max_chunk_query, _source=False)\n",
+    "    max_chapter_chunk_result = esclient.search(\n",
+    "        index=index_name,\n",
+    "        body=get_max_chunk_number_query(chapter_number, debug=False),\n",
+    "        _source=False,\n",
+    "    )\n",
+    "    max_chunk_number = max_chapter_chunk_result[\"aggregations\"][\"max_chunk_number\"][\n",
+    "        \"max_chunk\"\n",
+    "    ][\"value\"]\n",
     "\n",
-    "# max_chapter_chunk_result = esclient.search(index=index_name, body=get_max_chunk_number_query(chapter_number, debug=False), _source=False)\n",
-    "max_chapter_chunk_result = esclient.search(\n",
-    "    index=index_name, body=max_chunk_query, _source=False\n",
-    ")\n",
-    "max_chunk_number = max_chapter_chunk_result[\"aggregations\"][\"max_chunk_number\"][\n",
-    "    \"max_chunk\"\n",
-    "][\"value\"]\n",
+    "    adjacent_chunks_query = get_adjacent_chunks_query(\n",
+    "        hit_id, chunk_number, max_chunk_number, debug=False\n",
+    "    )\n",
+    "    results = esclient.search(\n",
+    "        index=index_name, body=adjacent_chunks_query, _source=False\n",
+    "    )\n",
+    "    print_text_from_results(results)\n",
+    "else:\n",
+    "    print(\"Skipping fetch of surrounding chunks due to no initial results.\")\n",
     "\n",
-    "adjacent_chunks_query = get_adjacent_chunks_query(\n",
-    "    hit_id, chunk_number, max_chunk_number, debug=False\n",
-    ")\n",
-    "results = esclient.search(index=index_name, body=adjacent_chunks_query, _source=False)\n",
-    "print_text_from_results(results)"
+    "\n",
+    "# max_chapter_chunk_result = esclient.search(index=index_name, body=get_max_chunk_number_query(chapter_number, debug=False), _source=False)"
    ],
    "metadata": {
     "id": "u7NFZBRJO3t7",
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "outputId": "fa6b58d7-ce04-47f2-c42a-289f13056213"
+    "outputId": "69b06dea-5189-40e7-83c4-bcc8baac5b91"
    },
-   "execution_count": null,
+   "execution_count": 77,
    "outputs": [
     {
      "output_type": "stream",
