--- a/supporting-blog-content/fetch-surrounding-chunks/fetch-surrounding-chunks.ipynb
+++ b/supporting-blog-content/fetch-surrounding-chunks/fetch-surrounding-chunks.ipynb
@@ -19,6 +19,8 @@
    "source": [
     "# Fetch surronding chucks (N-1, N+1)\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://ela.st/fetch-surrounding-chunks)\n",
+    "\n",
     "This notebook is designed to handle the ingestion of book text (Harry Potter and the Sorcerer's Stone) into an Elasticsearch Cloud instance. It includes partitioning the book text into chapters and chunking the chapter text, which are then ingested into Elasticsearch. The setup utilizes a nested structure, and for each chunk, it stores dense and sparse (ELSER) vector representations along with the text representation.\n",
     "\n",
     "Searches are performed using dense vector comparisons, sparse vector comparisons, and text search in parallel to demonstrate the power of hybrid search strategies. Additionally, the notebook is configured to retrieve adjacent chunks (n-1 and n+1), allowing for a more contextual understanding of the search results.\n",
